--- a/your-code/lab-regex.ipynb
+++ b/your-code/lab-regex.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '[aeiouy]'\n",
+    "print(re.findall(pattern, text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy ', 'puppy ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern ='puppy | puppis'\n",
+    "print(re.findall(pattern, text))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern ='r[au]n'\n",
+    "\n",
+    "print(re.findall(pattern, text)) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'relay', 'race', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r'[r]\\w+'\n",
+    "\n",
+    "print(re.findall(pattern, text)) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence with special characters in it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = re.sub('!', 'i', text)\n",
+    "print(string)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sentence', 'words', 'varying', 'lengths']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = \"[\\w']{5,}\"\n",
+    "string = re.findall(pattern, text)\n",
+    "print(string)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '[b]\\w+[t]'\n",
+    "print(re.findall(pattern, text)) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern ='\\w+''e[ao]''\\w+'\n",
+    "print(re.findall(pattern, text)) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '[A-Z][a-z]+'\n",
+    "print(re.findall(pattern, text)) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '([A-Z][a-z]+ ?[A-Z][a-z]+)'\n",
+    "print(re.findall(pattern, text))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +364,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I will bet you $50 I can get the bartender to give me a free drink.', 'I am in!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '\"([^\"]*)\"'\n",
+    "print(re.findall(pattern, text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +398,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['50']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '\\d+'\n",
+    "\n",
+    "print(re.findall(pattern, text))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,10 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '098-32-5295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = '[\\d]{3}-[\\d]{2}-[\\d]{4}'\n",
+    "print(re.findall(pattern, text))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,10 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(847)789-0984', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern ='[(\\d)]{5}[\\d]{3}-[\\d]{4}' \n",
+    "\n",
+    "print(re.findall(pattern, text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,10 +488,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '(847)789-0984', '098-32-5295', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern =  '[(\\d)]{5}[\\d]{3}-[\\d]{4}|[\\d]{3}-[\\d]{2}-[\\d]{4}'\n",
+    "\n",
+    "print(re.findall(pattern, text))"
+   ]
   }
  ],
  "metadata": {
@@ -349,7 +522,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.12"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
