--- a/your-code/lab-regex.ipynb
+++ b/your-code/lab-regex.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,19 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['puppy ', 'puppy ']\n"
+      "['puppy', 'puppies', 'puppy']\n"
      ]
     }
    ],
    "source": [
-    "pattern ='puppy | puppis'\n",
+    "pattern ='puppy|puppies' \n",
     "print(re.findall(pattern, text))\n",
     "\n"
    ]
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,19 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['50']\n"
+      "['30', '30', '14', '16', '10']\n"
      ]
     }
    ],
    "source": [
-    "pattern = '\\d+'\n",
+    "pattern = '[\\d]+'\n",
     "\n",
     "print(re.findall(pattern, text))\n"
    ]
